# DESOM

./: .gitignore  pyproject.toml
src/DESOM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/desom/: AE.py  ConvDESOM.py  DESOM.py  Kerasom.py  autoencoder.py  callbacks.py  conv_desom.py  desom.py  desom_benchmark.py  evaluation.py  kerasom.py  som_layer.py  utils.py
src/desom/old/: desom.py  desom_benchmark.py  evaluation.py  kerasom.py
tests/: have_fun.ipynb
